Add delete book functionality to Library

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
 
 <div id="BookDisplay">
-    
+    <div class="BookCard">
+        <p class="BookTitle">Title</p>
+        <p class="BookAuthor">Author</p>
+        <p class="BookPages">pages</p>
+        <label for="">Read</label>
+        <input type="checkbox" class="BookRead" id="">
+    </div> 
 </div>
     
 </body>
