Add basic styling for displaying of BookCards

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 
+<h1>Book Library</h1>
+
 <div id="BookDisplay">
-    <div class="BookCard">
-    </div> 
+    <!-- Script will create BookCard div elements here -->
 </div>
     
 </body>
