--- a/index.html
+++ b/index.html
@@ -46,5 +46,9 @@
     <!-- Script will create BookCard div elements here -->
 </div>
     
+<footer>
+    Copyright &copy 2023 Matt Talley (socrastein) <a href="https://github.com/socrastein"><img id="gitLogo" src="github.svg"></a>
+</footer>
+
 </body>
 </html>
